# gauro

./: Accountant.ipynb  Evaluation.ipynb  README.md  main.py  pyproject.toml
classification/: MakeCircles.ipynb
