[project]
name = "gauro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bitsandbytes>=0.49.1",
    "datasets>=4.5.0",
    "matplotlib>=3.10.8",
    "peft>=0.18.1",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.1.0",
]
